[package]
name = "linch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0", features = ["derive"]}
reqwest = { version = "0.11.13", features = ["blocking"] }
colored = "2.0.0"
dns-lookup = "1.0.1"
critical-section = { version = "1.1.1", features = ["std"] }