[package]
name = "lync"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = {version = "4.0", features = ["derive"]}
reqwest = { version = "0.11.13", features = ["blocking"] }
colored = "2.0.0"
dns-lookup = "1.0.1"
critical-section = { version = "1.1.1", features = ["std"] }

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.4"